--- a/App1_ConsultaCEP/App1_ConsultaCEP.Android/App1_ConsultaCEP.Android.csproj
+++ b/App1_ConsultaCEP/App1_ConsultaCEP.Android/App1_ConsultaCEP.Android.csproj
@@ -57,7 +57,9 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="28.0.0.3" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MessageAndroid.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MessageiOS.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
